--- a/src/app/scheme/scheme.component.html
+++ b/src/app/scheme/scheme.component.html
@@ -67,7 +67,7 @@
   </div>
   <div class="container-flex">
       <span class="btn btn-success float-right" data-toggle="modal" data-target="#createuser">
-          + Add Scheme +
+          <i class="fa fa-plus"> </i> Add Scheme
       </span>
       <table class="table table-striped">
           <thead>
@@ -88,14 +88,14 @@
                   <td>Somewhere khanepni sansthann</td>
                   <td>Some Where, Under same-05, SKY,550</td>
                   <td>9815004608,9862679609</td>
-                  <span class="btn btn-primary btn-circle btn-circle-sm mr-2" (click)="deleteUser(user.userId,user.role)">
-                      <!-- <i class="fa fa-car">   </i> -->
-                      U
-                  </span>
-                  <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId,user.role)">
-                      <!-- <i class="fa fa-car">   </i> -->
-                      X
-                  </span>
+                  <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
+                    <i class="fa fa-pencil">   </i> 
+                       
+                   </span>
+                   <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
+                        <i class="fa fa-trash">   </i> 
+                       
+                   </span>
               </tr>
               <tr *ngFor="let user of users; let i = index;">
                   <th scope="row"> {{ i+1 }} </th>
@@ -104,10 +104,14 @@
                   <td>{{user.active}}</td>
                   <td>
   
-                      <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId,user.role)">
-                          <!-- <i class="fa fa-car">   </i> -->
-                          X
-                      </span>
+                    <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2">
+                        <i class="fa fa-pencil">   </i> 
+                           
+                       </span>
+                       <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
+                            <i class="fa fa-trash">   </i> 
+                           
+                       </span>
   
                   </td>
               </tr>
