--- a/src/app/superadmin/superadmin.component.html
+++ b/src/app/superadmin/superadmin.component.html
@@ -1,6 +1,6 @@
 <div class="container-flex mt-3 mb-3">
   <div class="btn btn-success float-right"  data-toggle="modal" data-target="#createuser">
-    + Add +
+    <i class="fa fa-plus"> </i> Add +
   </div>
 </div>
 <div class="container-flex">
@@ -23,7 +23,7 @@
         <td>{{user.active}}</td>
         <td> 
         
-          <span class="btn btn-danger btn-circle btn-circle-sm" (click)="deleteUser(user.userId,user.role)">
+          <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="deleteUser(user.userId,user.role)">
            <!-- <i class="fa fa-car">   </i> -->
           X
           </span>
