--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    font-family: Nunito,sans-serrif!important;
+    font-family: Nunito,sans-serrif;
+}
+body{
+    width: 100% !important;
+    overflow-x: hidden;
 }
